--- a/dergeraet/makefile.am
+++ b/dergeraet/makefile.am
@@ -1,5 +1,5 @@
 lib_LTLIBRARIES = libdergeraet.la
 
-libdergeraet_la_SOURCES = poisson.cpp
+libdergeraet_la_SOURCES = poisson.cpp lapack.cpp blas.cpp
 libdergeraet_la_LDFLAGS = -version-info 0:0:0
 
