--- a/bin/makefile.am
+++ b/bin/makefile.am
@@ -1,4 +1,4 @@
 noinst_PROGRAMS = test_poisson
 
 test_poisson_SOURCES = test_poisson.cpp
-test_poisson_LDADD   = $(top_builddir)/dergeraet/libdergeraet.la -lfftw3
+test_poisson_LDADD   = $(top_builddir)/dergeraet/libdergeraet.la -lfftw3 -lfftw3f
