--- a/bin/makefile.am
+++ b/bin/makefile.am
@@ -1,4 +1,7 @@
-noinst_PROGRAMS = test_poisson
+noinst_PROGRAMS = test_poisson test_gmres
 
 test_poisson_SOURCES = test_poisson.cpp
 test_poisson_LDADD   = $(top_builddir)/dergeraet/libdergeraet.la -lfftw3
+
+test_gmres_SOURCES = test_gmres.cpp
+test_gmres_LDADD   = $(top_builddir)/dergeraet/libdergeraet.la -lopenblas -lfftw3 -lfftw3f
