--- a/bin/makefile.am
+++ b/bin/makefile.am
@@ -1,4 +1,4 @@
-noinst_PROGRAMS = test_poisson test_gmres test_fields test_dergeraet
+noinst_PROGRAMS = test_poisson test_gmres test_fields test_dergeraet test_dergeraet_2d
 
 test_poisson_SOURCES = test_poisson.cpp
 test_poisson_LDADD   = $(top_builddir)/dergeraet/libdergeraet.la
@@ -13,4 +13,8 @@ test_fields_CXXFLAGS = -fopenmp -O3 -mavx
 test_dergeraet_SOURCES = test_dergeraet.cpp
 test_dergeraet_LDADD   = $(top_builddir)/dergeraet/libdergeraet.la
 test_dergeraet_CXXFLAGS = -fopenmp -O3 -mavx
+
+test_dergeraet_2d_SOURCES = test_dergeraet_2d.cpp
+test_dergeraet_2d_LDADD   = $(top_builddir)/dergeraet/libdergeraet.la
+test_dergeraet_2d_CXXFLAGS = -fopenmp -O3 -mavx
 
