Refactoring, bugfixes, proper integrattion of OpenMP, preparation for CUDA.

--- a/configure.ac
+++ b/configure.ac
@@ -9,8 +9,10 @@ AM_PROG_AR
 AC_LANG([C++])
 AC_PROG_CC
 AC_PROG_CXX
-
+AC_OPENMP
+AC_SUBST([AM_CXXFLAGS],["$OPENMP_CXXFLAGS"]) 
 AX_CXX_COMPILE_STDCXX_17([noext],[mandatory])
+AX_CHECK_CUDA
 
 AC_SUBST([AM_CPPFLAGS],['-I$(top_srcdir)'])
 
