Permit generic BLAS implementations.

--- a/configure.ac
+++ b/configure.ac
@@ -13,6 +13,7 @@ AC_OPENMP
 AC_SUBST([AM_CXXFLAGS],["$OPENMP_CXXFLAGS"]) 
 AX_CXX_COMPILE_STDCXX_17([noext],[mandatory])
 AX_CHECK_CUDA
+AX_BLAS
 
 AC_SUBST([AM_CPPFLAGS],['-I$(top_srcdir)'])
 
