--- a/bin/makefile.am
+++ b/bin/makefile.am
@@ -2,12 +2,21 @@ noinst_PROGRAMS = test_poisson test_gmres test_fields test_dergeraet test_derger
 
 test_poisson_SOURCES = test_poisson.cpp
 test_poisson_LDADD   = $(top_builddir)/dergeraet/libdergeraet.la
+if HAVE_CUDA
+test_poisson_LDADD  += $(top_builddir)/dergeraet/libdergeraet_cuda.a -lcudart
+endif
 
 test_gmres_SOURCES = test_gmres.cpp
 test_gmres_LDADD   = $(top_builddir)/dergeraet/libdergeraet.la
+if HAVE_CUDA
+test_gmres_LDADD  += $(top_builddir)/dergeraet/libdergeraet_cuda.a -lcudart
+endif
 
 test_fields_SOURCES = test_fields.cpp
 test_fields_LDADD   = $(top_builddir)/dergeraet/libdergeraet.la
+if HAVE_CUDA
+test_fields_LDADD  += $(top_builddir)/dergeraet/libdergeraet_cuda.a -lcudart
+endif
 
 test_dergeraet_SOURCES = test_dergeraet.cpp
 test_dergeraet_LDADD   = $(top_builddir)/dergeraet/libdergeraet.la 
