--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 *.lo
 *.la
 *.a
+*.png
 bin/*
 !bin/*.cpp
 !bin/makefile.am
@@ -37,4 +38,5 @@ m4/ltoptions.m4
 m4/ltsugar.m4
 m4/ltversion.m4
 m4/lt~obsolete.m4
-
+.cproject
+.project
