--- a/bin/makefile.am
+++ b/bin/makefile.am
@@ -1,10 +1,15 @@
-noinst_PROGRAMS = test_poisson test_gmres test_fields test_dergeraet test_nufi_cpu test_nufi_cpu_2d
+noinst_PROGRAMS = test_poisson test_maxwell_periodic test_gmres test_fields \
+					test_dergeraet test_nufi_cpu test_nufi_cpu_2d
 #test_dergeraet_2d test_dergeraet_3d
 					 
 
 test_poisson_SOURCES = test_poisson.cpp
 test_poisson_LDADD   = $(top_builddir)/dergeraet/libdergeraet.a
 test_poisson_LDADD  += $(CUDA_LDFLAGS) $(BLAS_LIBS) -lfftw3 -lfftw3f
+
+test_maxwell_periodic_SOURCES = test_maxwell_periodic.cpp
+test_maxwell_periodic_LDADD   = $(top_builddir)/dergeraet/libdergeraet.a
+test_maxwell_periodic_LDADD  += $(CUDA_LDFLAGS) $(BLAS_LIBS) -lfftw3 -lfftw3f
 
 test_gmres_SOURCES = test_gmres.cpp
 test_gmres_LDADD   = $(top_builddir)/dergeraet/libdergeraet.a
