--- a/dergeraet/makefile.am
+++ b/dergeraet/makefile.am
@@ -1,8 +1,8 @@
 noinst_LIBRARIES = libdergeraet.a
 
 libdergeraet_a_SOURCES = finite_difference_poisson.cpp maxwell.cpp \
-						 forces.cpp poisson.cpp electro_magnetic_force.cpp \
-						 lapack.cpp blas.cpp cuda_kernel.cu
+						 forces.cpp poisson.cpp lapack.cpp \
+						 blas.cpp cuda_kernel.cu
 
 # This includes the dependecies of cuda_kernel.cu and causes automatic
 # recompilaton if necessary. No more need to recompile everything.
