--- a/configure.ac
+++ b/configure.ac
@@ -3,7 +3,7 @@ AC_CANONICAL_TARGET
 AC_CONFIG_MACRO_DIR([m4])
 
 AM_INIT_AUTOMAKE([nostdinc dist-xz])
-AM_SILENT_RULES([yes])
+AM_SILENT_RULES([no])
 AM_PROG_AR
 AC_PROG_RANLIB
 
