--- a/bin/makefile.am
+++ b/bin/makefile.am
@@ -1,5 +1,4 @@
-noinst_PROGRAMS = test_poisson test_gmres test_fields test_dergeraet test_nufi_cpu test_nufi_cpu_2d
-#test_dergeraet_2d test_dergeraet_3d
+noinst_PROGRAMS = test_poisson test_gmres test_fields test_dergeraet test_nufi_cpu test_nufi_cpu_2d test_dergeraet_2d test_dergeraet_3d
 					 
 
 test_poisson_SOURCES = test_poisson.cpp
@@ -26,15 +25,11 @@ test_nufi_cpu_2d_SOURCES = test_nufi_cpu_2d.cpp
 test_nufi_cpu_2d_LDADD   = $(top_builddir)/dergeraet/libdergeraet.a 
 test_nufi_cpu_2d_LDADD  += $(CUDA_LDFLAGS) $(BLAS_LIBS) -lfftw3 -lfftw3f
 
+test_dergeraet_2d_SOURCES = test_dergeraet_2d.cpp
+test_dergeraet_2d_LDADD   = $(top_builddir)/dergeraet/libdergeraet.a 
+test_dergeraet_2d_LDADD  += $(CUDA_LDFLAGS) $(BLAS_LIBS) -lfftw3 -lfftw3f -lmpi #-lmpi_cxx
 
-# Programms using mpi are commented out as mpi does not work on Paul's workstation. 
-# If you like to use these files comment the respective files back in.
-
-#test_dergeraet_2d_SOURCES = test_dergeraet_2d.cpp
-#test_dergeraet_2d_LDADD   = $(top_builddir)/dergeraet/libdergeraet.a 
-#test_dergeraet_2d_LDADD  += $(CUDA_LDFLAGS) $(BLAS_LIBS) -lfftw3 -lfftw3f -lmpi #-lmpi_cxx
-
-#test_dergeraet_3d_SOURCES = test_dergeraet_3d.cpp
-#test_dergeraet_3d_LDADD   = $(top_builddir)/dergeraet/libdergeraet.a 
-#test_dergeraet_3d_LDADD  += $(CUDA_LDFLAGS) $(BLAS_LIBS) -lfftw3 -lfftw3f -lmpi #-lmpi_cxx
+test_dergeraet_3d_SOURCES = test_dergeraet_3d.cpp
+test_dergeraet_3d_LDADD   = $(top_builddir)/dergeraet/libdergeraet.a 
+test_dergeraet_3d_LDADD  += $(CUDA_LDFLAGS) $(BLAS_LIBS) -lfftw3 -lfftw3f -lmpi #-lmpi_cxx
 
