Only one eval_f call + Update tests

--- a/AnjaMathematica/.vscode/settings.json
+++ b/AnjaMathematica/.vscode/settings.json
@@ -54,6 +54,8 @@
         "typeinfo": "cpp",
         "unordered_map": "cpp",
         "variant": "cpp",
-        "algorithm": "cpp"
+        "algorithm": "cpp",
+        "__memory": "cpp",
+        "execution": "cpp"
     }
 }
