added function to restart simulation with armadillo matrix

--- a/configure.ac
+++ b/configure.ac
@@ -13,7 +13,7 @@ AC_PROG_CXX
 AC_PROG_FC
 AC_OPENMP
 AC_SUBST([AM_CXXFLAGS],["$OPENMP_CXXFLAGS"]) 
-AX_CXX_COMPILE_STDCXX_17([noext],[mandatory])
+AX_CXX_COMPILE_STDCXX(20,[noext],[mandatory])
 AX_CHECK_CUDA
 AX_BLAS
 
