included anjamathematica folder into automake enviroment

--- a/configure.ac
+++ b/configure.ac
@@ -20,6 +20,7 @@ AC_SUBST([AM_CPPFLAGS],['-I$(top_srcdir)'])
 
 AC_CONFIG_HEADERS([dergeraet/autoconfig.hpp])
 AC_CONFIG_FILES([Makefile
+                 AnjaMathematica/makefile
                  dergeraet/makefile
                  bin/makefile])
 
