--- a/bin/makefile.am
+++ b/bin/makefile.am
@@ -1,21 +1,21 @@
 noinst_PROGRAMS = test_nufi_cpu test_nufi_cpu_2d test_nufi_cpu_3d test_nufi_cpu_3d_isolated
 
 test_nufi_cpu_SOURCES = test_nufi_cpu.cpp
-test_nufi_cpu_LDADD   = $(top_builddir)/dergeraet/libdergeraet.a 
+test_nufi_cpu_LDADD   = $(top_builddir)/nufi/libnufi.a 
 #test_nufi_cpu_LDADD  += $(CUDA_LDFLAGS) $(BLAS_LIBS) -lfftw3 -lfftw3f -lmpi -lmpi_cxx
 test_nufi_cpu_LDADD  += $(BLAS_LIBS) -lfftw3 -lfftw3f -lmpi -lmpi_cxx
 
 test_nufi_cpu_2d_SOURCES = test_nufi_cpu_2d.cpp
-test_nufi_cpu_2d_LDADD   = $(top_builddir)/dergeraet/libdergeraet.a 
+test_nufi_cpu_2d_LDADD   = $(top_builddir)/nufi/libnufi.a 
 #test_nufi_cpu_2d_LDADD  += $(CUDA_LDFLAGS) $(BLAS_LIBS) -lfftw3 -lfftw3f -lmpi -lmpi_cxx
 test_nufi_cpu_2d_LDADD  += $(BLAS_LIBS) -lfftw3 -lfftw3f -lmpi -lmpi_cxx
 
 test_nufi_cpu_3d_SOURCES = test_nufi_cpu_3d.cpp
-test_nufi_cpu_3d_LDADD   = $(top_builddir)/dergeraet/libdergeraet.a 
+test_nufi_cpu_3d_LDADD   = $(top_builddir)/nufi/libnufi.a 
 #test_nufi_cpu_3d_LDADD  += $(CUDA_LDFLAGS) $(BLAS_LIBS) -lfftw3 -lfftw3f -lmpi -lmpi_cxx
 test_nufi_cpu_3d_LDADD  += $(BLAS_LIBS) -lfftw3 -lfftw3f -lmpi -lmpi_cxx
 
 test_nufi_cpu_3d_isolated_SOURCES = test_nufi_cpu_3d_isolated.cpp
-test_nufi_cpu_3d_isolated_LDADD   = $(top_builddir)/dergeraet/libdergeraet.a 
+test_nufi_cpu_3d_isolated_LDADD   = $(top_builddir)/nufi/libnufi.a 
 #test_nufi_cpu_3d_isolated_LDADD  += $(CUDA_LDFLAGS) $(BLAS_LIBS) -lfftw3 -lfftw3f -lmpi -lmpi_cxx
 test_nufi_cpu_3d_isolated_LDADD  += $(BLAS_LIBS) -lfftw3 -lfftw3f -lmpi -lmpi_cxx
