--- a/bin/makefile.am
+++ b/bin/makefile.am
@@ -1,43 +1,46 @@
-noinst_PROGRAMS = test_poisson test_gmres test_fields test_dergeraet test_vp_dirichlet_1d test_vp_ion_acoustic_1d_dirichlet test_nufi_cpu test_nufi_cpu_2d test_dergeraet_2d test_dergeraet_3d
+noinst_PROGRAMS = test_poisson test_gmres test_fields test_vp_dirichlet_1d \
+				  test_vp_ion_acoustic_1d_dirichlet \
+				  test_nufi_cpu_1d test_nufi_cpu_2d  \
+  				  test_nufi_gpu_1d test_nufi_gpu_2d test_nufi_gpu_3d 
 					 
 
 test_poisson_SOURCES = test_poisson.cpp
-test_poisson_LDADD   = $(top_builddir)/dergeraet/libdergeraet.a
+test_poisson_LDADD   = $(top_builddir)/nufi/libnufi.a
 test_poisson_LDADD  += $(CUDA_LDFLAGS) $(BLAS_LIBS) -lfftw3 -lfftw3f
 
 test_gmres_SOURCES = test_gmres.cpp
-test_gmres_LDADD   = $(top_builddir)/dergeraet/libdergeraet.a
+test_gmres_LDADD   = $(top_builddir)/nufi/libnufi.a
 test_gmres_LDADD  += $(CUDA_LDFLAGS) $(BLAS_LIBS) -lfftw3 -lfftw3f
 
 test_fields_SOURCES = test_fields.cpp
-test_fields_LDADD   = $(top_builddir)/dergeraet/libdergeraet.a
+test_fields_LDADD   = $(top_builddir)/nufi/libnufi.a
 test_fields_LDADD  += $(CUDA_LDFLAGS) $(BLAS_LIBS) -lfftw3 -lfftw3f
 
-test_dergeraet_SOURCES = test_dergeraet.cpp
-test_dergeraet_LDADD   = $(top_builddir)/dergeraet/libdergeraet.a 
-test_dergeraet_LDADD  += $(CUDA_LDFLAGS) $(BLAS_LIBS) -lfftw3 -lfftw3f
-
 test_vp_dirichlet_1d_SOURCES = test_vp_dirichlet_1d.cpp
-test_vp_dirichlet_1d_LDADD   = $(top_builddir)/dergeraet/libdergeraet.a 
+test_vp_dirichlet_1d_LDADD   = $(top_builddir)/nufi/libnufi.a 
 test_vp_dirichlet_1d_LDADD  += $(CUDA_LDFLAGS) $(BLAS_LIBS) -lfftw3 -lfftw3f
 
 test_vp_ion_acoustic_1d_dirichlet_SOURCES = test_vp_ion_acoustic_1d_dirichlet.cpp
-test_vp_ion_acoustic_1d_dirichlet_LDADD   = $(top_builddir)/dergeraet/libdergeraet.a 
+test_vp_ion_acoustic_1d_dirichlet_LDADD   = $(top_builddir)/nufi/libnufi.a 
 test_vp_ion_acoustic_1d_dirichlet_LDADD  += $(CUDA_LDFLAGS) $(BLAS_LIBS) -lfftw3 -lfftw3f
 
-test_nufi_cpu_SOURCES = test_nufi_cpu.cpp
-test_nufi_cpu_LDADD   = $(top_builddir)/dergeraet/libdergeraet.a 
-test_nufi_cpu_LDADD  += $(CUDA_LDFLAGS) $(BLAS_LIBS) -lfftw3 -lfftw3f
+test_nufi_cpu_1d_SOURCES = test_nufi_cpu_1d.cpp
+test_nufi_cpu_1d_LDADD   = $(top_builddir)/nufi/libnufi.a 
+test_nufi_cpu_1d_LDADD  += $(CUDA_LDFLAGS) $(BLAS_LIBS) -lfftw3 -lfftw3f -lmpi -lmpi_cxx
 
 test_nufi_cpu_2d_SOURCES = test_nufi_cpu_2d.cpp
-test_nufi_cpu_2d_LDADD   = $(top_builddir)/dergeraet/libdergeraet.a 
-test_nufi_cpu_2d_LDADD  += $(CUDA_LDFLAGS) $(BLAS_LIBS) -lfftw3 -lfftw3f
+test_nufi_cpu_2d_LDADD   = $(top_builddir)/nufi/libnufi.a 
+test_nufi_cpu_2d_LDADD  += $(CUDA_LDFLAGS) $(BLAS_LIBS) -lfftw3 -lfftw3f -lmpi -lmpi_cxx
 
-test_dergeraet_2d_SOURCES = test_dergeraet_2d.cpp
-test_dergeraet_2d_LDADD   = $(top_builddir)/dergeraet/libdergeraet.a 
-test_dergeraet_2d_LDADD  += $(CUDA_LDFLAGS) $(BLAS_LIBS) -lfftw3 -lfftw3f -lmpi -lmpi_cxx
+test_nufi_gpu_1d_SOURCES = test_nufi_gpu_1d.cpp
+test_nufi_gpu_1d_LDADD   = $(top_builddir)/nufi/libnufi.a 
+test_nufi_gpu_1d_LDADD  += $(CUDA_LDFLAGS) $(BLAS_LIBS) -lfftw3 -lfftw3f -lmpi -lmpi_cxx
 
-test_dergeraet_3d_SOURCES = test_dergeraet_3d.cpp
-test_dergeraet_3d_LDADD   = $(top_builddir)/dergeraet/libdergeraet.a 
-test_dergeraet_3d_LDADD  += $(CUDA_LDFLAGS) $(BLAS_LIBS) -lfftw3 -lfftw3f -lmpi -lmpi_cxx
+test_nufi_gpu_2d_SOURCES = test_nufi_gpu_2d.cpp
+test_nufi_gpu_2d_LDADD   = $(top_builddir)/nufi/libnufi.a 
+test_nufi_gpu_2d_LDADD  += $(CUDA_LDFLAGS) $(BLAS_LIBS) -lfftw3 -lfftw3f -lmpi -lmpi_cxx
+
+test_nufi_gpu_3d_SOURCES = test_nufi_gpu_3d.cpp
+test_nufi_gpu_3d_LDADD   = $(top_builddir)/nufi/libnufi.a 
+test_nufi_gpu_3d_LDADD  += $(CUDA_LDFLAGS) $(BLAS_LIBS) -lfftw3 -lfftw3f -lmpi -lmpi_cxx
 
