--- a/bin/makefile.am
+++ b/bin/makefile.am
@@ -1,33 +1,33 @@
-noinst_PROGRAMS = test_dergeraet test_nufi_cpu test_nufi_cpu_2d \
+noinst_PROGRAMS = test_nufi test_nufi_cpu test_nufi_cpu_2d \
 				test_vlasov_maxwell_lie_splitting cuda_vlasov_maxwell_lie \
-				test_dergeraet_2d test_dergeraet_3d
+				test_nufi_gpu_2d test_nufi_gpu_3d
 
 
 test_vlasov_maxwell_lie_splitting_SOURCES = test_vlasov_maxwell_lie_splitting.cpp
-test_vlasov_maxwell_lie_splitting_LDADD   = $(top_builddir)/dergeraet/libdergeraet.a
+test_vlasov_maxwell_lie_splitting_LDADD   = $(top_builddir)/nufi/libnufi.a
 test_vlasov_maxwell_lie_splitting_LDADD  += $(CUDA_LDFLAGS) $(BLAS_LIBS) -lfftw3 -lfftw3f
 
 cuda_vlasov_maxwell_lie_SOURCES = cuda_vlasov_maxwell_lie.cpp
-cuda_vlasov_maxwell_lie_LDADD   = $(top_builddir)/dergeraet/libdergeraet.a
+cuda_vlasov_maxwell_lie_LDADD   = $(top_builddir)/nufi/libnufi.a
 cuda_vlasov_maxwell_lie_LDADD  += $(CUDA_LDFLAGS) $(BLAS_LIBS) -lfftw3 -lfftw3f
 
-test_dergeraet_SOURCES = test_dergeraet.cpp
-test_dergeraet_LDADD   = $(top_builddir)/dergeraet/libdergeraet.a 
-test_dergeraet_LDADD  += $(CUDA_LDFLAGS) $(BLAS_LIBS) -lfftw3 -lfftw3f
+test_nufi_SOURCES = test_nufi.cpp
+test_nufi_LDADD   = $(top_builddir)/nufi/libnufi.a 
+test_nufi_LDADD  += $(CUDA_LDFLAGS) $(BLAS_LIBS) -lfftw3 -lfftw3f
 
 test_nufi_cpu_SOURCES = test_nufi_cpu.cpp
-test_nufi_cpu_LDADD   = $(top_builddir)/dergeraet/libdergeraet.a 
+test_nufi_cpu_LDADD   = $(top_builddir)/nufi/libnufi.a 
 test_nufi_cpu_LDADD  += $(CUDA_LDFLAGS) $(BLAS_LIBS) -lfftw3 -lfftw3f
 
 test_nufi_cpu_2d_SOURCES = test_nufi_cpu_2d.cpp
-test_nufi_cpu_2d_LDADD   = $(top_builddir)/dergeraet/libdergeraet.a 
+test_nufi_cpu_2d_LDADD   = $(top_builddir)/nufi/libnufi.a 
 test_nufi_cpu_2d_LDADD  += $(CUDA_LDFLAGS) $(BLAS_LIBS) -lfftw3 -lfftw3f
 
-test_dergeraet_2d_SOURCES = test_dergeraet_2d.cpp
-test_dergeraet_2d_LDADD   = $(top_builddir)/dergeraet/libdergeraet.a 
-test_dergeraet_2d_LDADD  += $(CUDA_LDFLAGS) $(BLAS_LIBS) -lfftw3 -lfftw3f -lmpi -lmpi_cxx
+test_nufi_gpu_2d_SOURCES = test_nufi_gpu_2d.cpp
+test_nufi_gpu_2d_LDADD   = $(top_builddir)/nufi/libnufi.a 
+test_nufi_gpu_2d_LDADD  += $(CUDA_LDFLAGS) $(BLAS_LIBS) -lfftw3 -lfftw3f -lmpi -lmpi_cxx
 
-test_dergeraet_3d_SOURCES = test_dergeraet_3d.cpp
-test_dergeraet_3d_LDADD   = $(top_builddir)/dergeraet/libdergeraet.a 
-test_dergeraet_3d_LDADD  += $(CUDA_LDFLAGS) $(BLAS_LIBS) -lfftw3 -lfftw3f -lmpi -lmpi_cxx
+test_nufi_gpu_3d_SOURCES = test_nufi_gpu_3d.cpp
+test_nufi_gpu_3d_LDADD   = $(top_builddir)/nufi/libnufi.a 
+test_nufi_gpu_3d_LDADD  += $(CUDA_LDFLAGS) $(BLAS_LIBS) -lfftw3 -lfftw3f -lmpi -lmpi_cxx
 
