change name of lib from placeholder to nufi

--- a/configure.ac
+++ b/configure.ac
@@ -1,4 +1,4 @@
-AC_INIT([dergeraet],[0.1])
+AC_INIT([nufi],[0.1])
 AC_CANONICAL_TARGET
 AC_CONFIG_MACRO_DIR([m4])
 
@@ -18,11 +18,11 @@ AX_BLAS
 
 AC_SUBST([AM_CPPFLAGS],['-I$(top_srcdir)'])
 
-AC_CONFIG_HEADERS([dergeraet/autoconfig.hpp])
+AC_CONFIG_HEADERS([nufi/autoconfig.hpp])
 AC_CONFIG_FILES([Makefile
                  AnjaMathematica/makefile
                  AnjaMathematica/CalculateMoments_generated/makefile
-                 dergeraet/makefile
+                 nufi/makefile
                  bin/makefile])
 
 AC_OUTPUT
