--- a/bin/makefile.am
+++ b/bin/makefile.am
@@ -2,23 +2,23 @@ noinst_PROGRAMS = test_nufi_cpu test_nufi_cpu_2d test_nufi_cpu_3d TestCalculateM
 #test_nufi_cpu_3d_isolated 
 
 test_nufi_cpu_SOURCES = test_nufi_cpu.cpp
-test_nufi_cpu_LDADD   = $(top_builddir)/dergeraet/libdergeraet.a 
+test_nufi_cpu_LDADD   = $(top_builddir)/nufi/libnufi.a 
 test_nufi_cpu_LDADD  += $(BLAS_LIBS) -lfftw3 -lfftw3f -lmpi -lmpi_cxx
 
 test_nufi_cpu_2d_SOURCES = test_nufi_cpu_2d.cpp
-test_nufi_cpu_2d_LDADD   = $(top_builddir)/dergeraet/libdergeraet.a 
+test_nufi_cpu_2d_LDADD   = $(top_builddir)/nufi/libnufi.a 
 test_nufi_cpu_2d_LDADD  += $(BLAS_LIBS) -lfftw3 -lfftw3f -lmpi -lmpi_cxx
 
 test_nufi_cpu_3d_SOURCES = test_nufi_cpu_3d.cpp
-test_nufi_cpu_3d_LDADD   = $(top_builddir)/dergeraet/libdergeraet.a 
+test_nufi_cpu_3d_LDADD   = $(top_builddir)/nufi/libnufi.a 
 test_nufi_cpu_3d_LDADD  += $(BLAS_LIBS) -lfftw3 -lfftw3f -lmpi -lmpi_cxx
 
 #test_nufi_cpu_3d_isolated_SOURCES = test_nufi_cpu_3d_isolated.cpp
-#test_nufi_cpu_3d_isolated_LDADD   = $(top_builddir)/dergeraet/libdergeraet.a 
+#test_nufi_cpu_3d_isolated_LDADD   = $(top_builddir)/nufi/libnufi.a 
 #test_nufi_cpu_3d_isolated_LDADD  += $(BLAS_LIBS) -lfftw3 -lfftw3f -lmpi -lmpi_cxx
 
 TestCalculateMoments_SOURCES = TestCalculateMoments.cpp
-TestCalculateMoments_LDADD   = $(top_builddir)/dergeraet/libdergeraet.a 
+TestCalculateMoments_LDADD   = $(top_builddir)/nufi/libnufi.a 
 TestCalculateMoments_LDADD  += $(top_builddir)/AnjaMathematica/CalculateMoments_generated/libCalculateMomentsgenerated.a 
 TestCalculateMoments_LDADD  += $(BLAS_LIBS) -lfftw3 -lfftw3f -lmpi -lmpi_cxx
 
