--- a/bin/makefile.am
+++ b/bin/makefile.am
@@ -1,15 +1,15 @@
 noinst_PROGRAMS = test_nufi_cpu test_nufi_cpu_2d test_cpp_interface
 
 test_nufi_cpu_SOURCES = test_nufi_cpu.cpp
-test_nufi_cpu_LDADD   = $(top_builddir)/dergeraet/libdergeraet.a 
+test_nufi_cpu_LDADD   = $(top_builddir)/nufi/libnufi.a 
 test_nufi_cpu_LDADD  += $(BLAS_LIBS) -lfftw3 -lfftw3f
 
 test_nufi_cpu_2d_SOURCES = test_nufi_cpu_2d.cpp
-test_nufi_cpu_2d_LDADD   = $(top_builddir)/dergeraet/libdergeraet.a 
+test_nufi_cpu_2d_LDADD   = $(top_builddir)/nufi/libnufi.a 
 test_nufi_cpu_2d_LDADD  +=  $(BLAS_LIBS) -lfftw3 -lfftw3f
 
 test_cpp_interface_SOURCES = test_cpp_interface.cpp
-test_cpp_interface_LDADD   = $(top_builddir)/dergeraet/libdergeraet.a 
+test_cpp_interface_LDADD   = $(top_builddir)/nufi/libnufi.a 
 test_cpp_interface_LDADD  += /home/paul/Projekte/htlib/build/package/libhtl.a 
 test_cpp_interface_LDADD  += /home/paul/Projekte/htlib/build/cpp_interface/libchtlib.a /home/paul/Projekte/htlib/build/cross/libhtl_cross.a 
 test_cpp_interface_LDADD  += /home/paul/Projekte/htlib/build/htens/libhtl_m_htensor.a /home/paul/Projekte/htlib/build/timer/libhtl_timer.a 
