--- a/bin/makefile.am
+++ b/bin/makefile.am
@@ -1,7 +1,8 @@
 noinst_PROGRAMS = test_poisson test_gmres test_fields test_vp_dirichlet_1d \
 				  test_vp_ion_acoustic_1d_dirichlet \
 				  test_nufi_cpu_1d test_nufi_cpu_2d  \
-  				  test_nufi_gpu_1d test_nufi_gpu_2d test_nufi_gpu_3d 
+  				  test_nufi_gpu_1d test_nufi_gpu_2d test_nufi_gpu_3d \
+  				  particle_in_cell_ion_acoustic
 					 
 
 test_poisson_SOURCES = test_poisson.cpp
@@ -43,4 +44,8 @@ test_nufi_gpu_2d_LDADD  += $(CUDA_LDFLAGS) $(BLAS_LIBS) -lfftw3 -lfftw3f -lmpi -
 test_nufi_gpu_3d_SOURCES = test_nufi_gpu_3d.cpp
 test_nufi_gpu_3d_LDADD   = $(top_builddir)/nufi/libnufi.a 
 test_nufi_gpu_3d_LDADD  += $(CUDA_LDFLAGS) $(BLAS_LIBS) -lfftw3 -lfftw3f -lmpi -lmpi_cxx
+
+particle_in_cell_ion_acoustic_SOURCES = particle_in_cell_ion_acoustic.cpp
+particle_in_cell_ion_acoustic_LDADD   = $(top_builddir)/nufi/libnufi.a 
+particle_in_cell_ion_acoustic_LDADD  += $(CUDA_LDFLAGS) $(BLAS_LIBS) -lfftw3 -lfftw3f -lmpi -lmpi_cxx
 
